no restriction api

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>
 </head>
 <body>
-  <app-root class="ahem-app">Loading...</app-root>
+  <app-root class="ahem-app">Loadsdfing...</app-root>
 </body>
 </html>
 
